changed logo to yellow, changed font to nuninto"

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->  
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->  
 <head>
+   <link href="//fonts.googleapis.com/css?family=Nunito:300,400,700" rel="stylesheet" type="text/css">
+
     <title>Vizi</title>
 
     <!-- Meta -->
@@ -45,16 +47,16 @@
                         <span class="fa fa-bars"></span>
                     </button>
                     <a class="navbar-brand" href="">
-                        <img id="logo-header" src="assets/img/logo.png" alt="Logo">
+                        <div>Vizi |/\| <span id="tagline">Virtually Anything</span></div>
                     </a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse navbar-responsive-collapse">
                     <ul class="nav navbar-nav">
-                        <li><a href="#about">About</a></li>
+                        <li><a href="#about">Team</a></li>
                         <li><a href="#creations">Creations</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="#contact">Tech</a></li>
                     </ul>
                 </div><!--/navbar-collapse-->
             </div>    
