--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
                         <span class="fa fa-bars"></span>
                     </button>
                     <a class="navbar-brand" href="">
-                        <div>Vizi |/\| <span id="tagline">Virtually Anything</span></div>
+                        <div>VIZI |/\| <span id="tagline">Virtually Anything&trade;</span></div>
                     </a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse navbar-responsive-collapse">
                     <ul class="nav navbar-nav">
-                        <li><a href="#about">Team</a></li>
+                        <li><a href="#team">Team</a></li>
                         <li><a href="#creations">Creations</a></li>
-                        <li><a href="#contact">Tech</a></li>
+                        <li><a href="#tech">Tech</a></li>
                     </ul>
                 </div><!--/navbar-collapse-->
             </div>    
@@ -64,6 +64,12 @@
         <!-- End Navbar -->
     </div>
     <!--=== End Header ===-->  
+
+    <div id="overview" class="left-menu">
+      Vizi is using the awesome power of virtual reality to build the visual web - engaging, emotional and entertaining experiences for the desktop, mobile, Internet of Things and immersive virtual reality devices - powered by a breakthrough technology platform and a multidisciplinary team with decades of experience in delivering visual products.
+    </div>
+
+
     <div id="about" class="panel">
       <p>This is a test. This is a test. This is a test. This is a test. This is a test. This is a test.
         This is a test. This is a test. This is a test. This is a test. This is a test. This is a test
@@ -81,6 +87,7 @@
 
 
 <script src="js/vendor/three.min.js"></script>
+<script src= "bower-components/angular.js"></script>
 <script src="js/vendor/CSS3DRenderer.js"></script>
 <script src="js/vendor/underscore.min.js"></script>
 <script src="js/vendor/tween.min.js"></script>
