--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html ng-app "viziApp">
+<html ng-app="viziApp">
 <!--[if IE 8]> <html lang="en" class="ie8"> <![endif]-->  
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->  
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->  
@@ -57,7 +57,7 @@
     <!--=== End Header ===-->  
 
     <div id="overview" class="left-menu">
-      Vizi is using the awesome power of virtual reality to build the visual web - engaging, emotional and entertaining experiences for the desktop, mobile, Internet of Things and immersive virtual reality devices - powered by a breakthrough technology platform and a multidisciplinary team with decades of experience in delivering visual products.
+      Vizi {{name}} is using the awesome power of virtual reality to build the visual web - engaging, emotional and entertaining experiences for the desktop, mobile, Internet of Things and immersive virtual reality devices - powered by a breakthrough technology platform and a multidisciplinary team with decades of experience in delivering visual products.
     </div>
 
 
@@ -75,7 +75,10 @@
 <script type="text/javascript" src="assets/plugins/jquery-1.10.2.min.js"></script>
 <script type="text/javascript" src="assets/plugins/jquery-migrate-1.2.1.min.js"></script>
 <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
-<script src= "bower-components/angular.js"></script>
+
+
+<script src= "bower_components/angular/angular.js"></script>
+<script src="js/app.js"></script>
 
 
 <script src="js/vendor/three.min.js"></script>
@@ -94,7 +97,6 @@
 <script src="js/lib/MathHelpers.js"></script>
 <script src="js/navigation.js"></script>
 <script src="js/animations.js"></script>
-<script src="js/ground.js"></script>
 <script src="js/statue.js"></script>
 <script src="js/world.js"></script>
 
