--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <span class="sr-only">Toggle navigation</span>
                         <span class="fa fa-bars"></span>
                     </button>
-                    <a class="navbar-brand" href="/">
+                    <a class="navbar-brand" href="/#">
                         <div>VIZI |/\| <span id="tagline">Virtually Anything&trade;</span></div>
                     </a>
                 </div>
