have all be same shape then rotate

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 <script src= "bower_components/angular/angular.js"></script>
 <script src= "bower_components/angular-route/angular-route.js"></script>
 <script src="js/app.js"></script>
+<script src="js/modules/creations.js"></script>
 
 
 <script src="js/vendor/three.min.js"></script>
@@ -93,7 +94,6 @@
 <script src="js/vendor/terrain-generator/terraingen.js"></script>
 <script src="js/vendor/terrain-generator/circle.js"></script>
 <script src="js/lib/MathHelpers.js"></script>
-<script src="js/navigation.js"></script>
 <script src="js/animations.js"></script>
 <script src="js/statue.js"></script>
 <script src="js/world.js"></script>
