two different panels

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
     <!--=== End Header ===-->  
     <div id="left-menu">
       <div ng-view></div>
-    <div id="about" class="panel">
+    </div>
+    <div id="futurego" class="panel">
       <p>This is a test. This is a test. This is a test. This is a test. This is a test. This is a test.
         This is a test. This is a test. This is a test. This is a test. This is a test. This is a test
         This is a test. This is a test. This is a test. This is a test. This is a test. This is a test
@@ -105,7 +106,33 @@
         This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
         This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
       </p>
-    </div>  
+    </div> 
+    <div id="car" class="panel">
+      <p>I am a car I am a car I am a car I am a car I am a car   
+        I am a car I am a car I am a car I am a car I am a car
+        I am a car I am a car I am a car I am a car I am a car
+        I am a car I am a car I am a car I am a car I am a car
+        I am a car I am a car I am a car I am a car I am a car
+        I am a car I am a car I am a car I am a car I am a car
+        I am a car I am a car I am a car I am a car I am a car
+        I am a car I am a car I am a car I am a car I am a car
+        I am a car I am a car I am a car I am a car I am a car
+        I am a car I am a car I am a car I am a car I am a car
+        I am a car I am a car I am a car I am a car I am a car
+        I am a car I am a car I am a car I am a car I am a car
+        I am a car I am a car I am a car I am a car I am a car
+        I am a car I am a car I am a car I am a car I am a car
+        I am a car I am a car I am a car I am a car I am a car
+        I am a car I am a car I am a car I am a car I am a car
+        I am a car I am a car I am a car I am a car I am a car
+        I am a car I am a car I am a car I am a car I am a car
+        I am a car I am a car I am a car I am a car I am a car
+        I am a car I am a car I am a car I am a car I am a car
+        I am a car I am a car I am a car I am a car I am a car
+        I am a car I am a car I am a car I am a car I am a car
+      </p>  
+
+    </div> 
 
 <div id="three-canvas"></div>
 
