refactoring to one controller for all frames

--- a/index.html
+++ b/index.html
@@ -59,80 +59,91 @@
     <div id="left-menu">
       <div ng-view></div>
     </div>
-    <div id="futurego" class="panel">
-      <p>This is a test. This is a test. This is a test. This is a test. This is a test. This is a test.
-        This is a test. This is a test. This is a test. This is a test. This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test. This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-      </p>
-    </div> 
-    <div id="car" class="panel">
-      <p>I am a car I am a car I am a car I am a car I am a car   
-        I am a car I am a car I am a car I am a car I am a car
-        I am a car I am a car I am a car I am a car I am a car
-        I am a car I am a car I am a car I am a car I am a car
-        I am a car I am a car I am a car I am a car I am a car
-        I am a car I am a car I am a car I am a car I am a car
-        I am a car I am a car I am a car I am a car I am a car
-        I am a car I am a car I am a car I am a car I am a car
-        I am a car I am a car I am a car I am a car I am a car
-        I am a car I am a car I am a car I am a car I am a car
-        I am a car I am a car I am a car I am a car I am a car
-        I am a car I am a car I am a car I am a car I am a car
-        I am a car I am a car I am a car I am a car I am a car
-        I am a car I am a car I am a car I am a car I am a car
-        I am a car I am a car I am a car I am a car I am a car
-        I am a car I am a car I am a car I am a car I am a car
-        I am a car I am a car I am a car I am a car I am a car
-        I am a car I am a car I am a car I am a car I am a car
-        I am a car I am a car I am a car I am a car I am a car
-        I am a car I am a car I am a car I am a car I am a car
-        I am a car I am a car I am a car I am a car I am a car
-        I am a car I am a car I am a car I am a car I am a car
-      </p>  
 
-    </div> 
+    <div class="team">
+      <div id = 'tony' class = "panel">
+        <p>Tony is an entrepreneur and career CTO/software architect who has developed international standards and protocols, developed noteworthy software products, and started and sold technology companies. Tony’s passion for innovating is exceeded only by his desire to build great products. His mission now is to bring virtual reality experiences to every person on the planet, running on every device, anywhere, any time. Tony founded Vizi in 2013, and oversees development and operations.</p>
+        <p>Tony is the co-creator of the VRML and X3D ISO standards for networked 3D graphics, and continues to innovate in 3D technology. He is the co-chair of the San Francisco WebGL Meetup (www.meetup.com/WebGL-Developers-Meetup), a founder of the Rest3D working group (http://www.rest3d.org/) and a member of the Khronos COLLADA working group creating glTF, the new file format standard for 3D web and mobile applications. Tony is also the author of O’Reilly Media’s first authoritative book on WebGL, WebGL Up and Running (2012), and the upcoming Programming 3D Applications in HTML5 and WebGL (O’Reilly 2013). Read more about Tony at http://www.tonyparisi.com/</p>
+      </div>
+    </div>
+ 
+
+
+    <div class = "creations">
+      <div id="futurego" class="panel">
+        <p>This is a test. This is a test. This is a test. This is a test. This is a test. This is a test.
+          This is a test. This is a test. This is a test. This is a test. This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test. This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
+        </p>
+      </div> 
+      <div id="car" class="panel">
+        <p>I am a car I am a car I am a car I am a car I am a car   
+          I am a car I am a car I am a car I am a car I am a car
+          I am a car I am a car I am a car I am a car I am a car
+          I am a car I am a car I am a car I am a car I am a car
+          I am a car I am a car I am a car I am a car I am a car
+          I am a car I am a car I am a car I am a car I am a car
+          I am a car I am a car I am a car I am a car I am a car
+          I am a car I am a car I am a car I am a car I am a car
+          I am a car I am a car I am a car I am a car I am a car
+          I am a car I am a car I am a car I am a car I am a car
+          I am a car I am a car I am a car I am a car I am a car
+          I am a car I am a car I am a car I am a car I am a car
+          I am a car I am a car I am a car I am a car I am a car
+          I am a car I am a car I am a car I am a car I am a car
+          I am a car I am a car I am a car I am a car I am a car
+          I am a car I am a car I am a car I am a car I am a car
+          I am a car I am a car I am a car I am a car I am a car
+          I am a car I am a car I am a car I am a car I am a car
+          I am a car I am a car I am a car I am a car I am a car
+          I am a car I am a car I am a car I am a car I am a car
+          I am a car I am a car I am a car I am a car I am a car
+          I am a car I am a car I am a car I am a car I am a car
+        </p>  
+      </div> 
+    </div
 
 <div id="three-canvas"></div>
 
