frames go back on route change

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html ng-app="viziApp">
+<html ng-app="viziApp" ng-controller="rootController">
 <!--[if IE 8]> <html lang="en" class="ie8"> <![endif]-->  
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->  
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->  
@@ -143,7 +143,7 @@
           I am a car I am a car I am a car I am a car I am a car
         </p>  
       </div> 
-    </div
+    </div>
 
 <div id="three-canvas"></div>
 
