adding iframes for past projects

--- a/index.html
+++ b/index.html
@@ -79,77 +79,10 @@
 
     <div class = "creations">
       <div id="futurego" class="panel">
-        <p>This is a test. This is a test. This is a test. This is a test. This is a test. This is a test.
-          This is a test. This is a test. This is a test. This is a test. This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test. This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-          This is a test. This is a test. This is a test. This is a test.This is a test. This is a test
-        </p>
+        <iframe src="http://vizi.gl/engine/tests/futurgo.html"></iframe>
       </div> 
-      <div id="car" class="panel">
-        <p>I am a car I am a car I am a car I am a car I am a car   
-          I am a car I am a car I am a car I am a car I am a car
-          I am a car I am a car I am a car I am a car I am a car
-          I am a car I am a car I am a car I am a car I am a car
-          I am a car I am a car I am a car I am a car I am a car
-          I am a car I am a car I am a car I am a car I am a car
-          I am a car I am a car I am a car I am a car I am a car
-          I am a car I am a car I am a car I am a car I am a car
-          I am a car I am a car I am a car I am a car I am a car
-          I am a car I am a car I am a car I am a car I am a car
-          I am a car I am a car I am a car I am a car I am a car
-          I am a car I am a car I am a car I am a car I am a car
-          I am a car I am a car I am a car I am a car I am a car
-          I am a car I am a car I am a car I am a car I am a car
-          I am a car I am a car I am a car I am a car I am a car
-          I am a car I am a car I am a car I am a car I am a car
-          I am a car I am a car I am a car I am a car I am a car
-          I am a car I am a car I am a car I am a car I am a car
-          I am a car I am a car I am a car I am a car I am a car
-          I am a car I am a car I am a car I am a car I am a car
-          I am a car I am a car I am a car I am a car I am a car
-          I am a car I am a car I am a car I am a car I am a car
-        </p>  
+      <div id="razer" class="panel">
+        <iframe src="http://vizi.gl/razer_prototype/razerzone.com/Razer%20Edge%204.htm"></iframe>
       </div> 
     </div>
 
