added sass for preprocessing

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- CSS Global Compulsory -->
     <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/main.css">
 
 
     <!-- CSS Customization -->
