dynamically loading and unloading iframes

--- a/index.html
+++ b/index.html
@@ -19,10 +19,6 @@
     <!-- CSS Global Compulsory -->
     <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/main.css">
-
-
-    <!-- CSS Customization -->
-    <link rel="stylesheet" href="assets/css/custom.css">
 </head>	
 
 <body>
@@ -79,10 +75,12 @@
 
     <div class = "creations">
       <div id="futurego" class="panel">
-        <iframe src="http://vizi.gl/engine/tests/futurgo.html"></iframe>
+        <!-- iframe will go here when user pulls up panel. -->
+        <iframe src=""></iframe>
       </div> 
       <div id="razer" class="panel">
-        <iframe src="http://vizi.gl/razer_prototype/razerzone.com/Razer%20Edge%204.htm"></iframe>
+        <!-- iframe will go here when user pulls up panel. -->
+        <iframe src=""></iframe>
       </div> 
     </div>
 
@@ -97,7 +95,7 @@
 <script src= "bower_components/angular/angular.js"></script>
 <script src= "bower_components/angular-route/angular-route.js"></script>
 <script src="js/app.js"></script>
-<script src="js/modules/creations.js"></script>
+<script src="js/modules/frames.js"></script>
 
 
 <script src="js/vendor/three.min.js"></script>
