making boxes dynamic

--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
 
 
     <div class = "creations">
-      <div id="futurego" class="panel">
+      <div id="futurego" class="iframePanel">
         <!-- iframe will go here when user pulls up panel. -->
         <iframe src=""></iframe>
       </div> 
-      <div id="razer" class="panel">
+      <div id="razer" class="iframePanel">
         <!-- iframe will go here when user pulls up panel. -->
         <iframe src=""></iframe>
       </div> 
