animation to cam now works no matter the angle the camera is rotated in

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <!-- End Navbar -->
     </div>
     <!--=== End Header ===-->  
-    <div id="left-menu">
+    <div class="left-menu">
       <div ng-view></div>
     </div>
 
