--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta name="Keywords" content="WebGL, HTML5, Visualization, 3D Printing, Virtual Reality, Oculus, Oculus Ready,Immersive">
+
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="favicon.ico">
@@ -59,15 +61,21 @@
     <div class="team">
       <div id = 'tony' class = "panel">
         <p>Tony is an entrepreneur and career CTO/software architect who has developed international standards and protocols, developed noteworthy software products, and started and sold technology companies. Tony’s passion for innovating is exceeded only by his desire to build great products. His mission now is to bring virtual reality experiences to every person on the planet, running on every device, anywhere, any time. Tony founded Vizi in 2013, and oversees development and operations.</p>
-        <p>Tony is the co-creator of the VRML and X3D ISO standards for networked 3D graphics, and continues to innovate in 3D technology. He is the co-chair of the San Francisco WebGL Meetup (www.meetup.com/WebGL-Developers-Meetup), a founder of the Rest3D working group (http://www.rest3d.org/) and a member of the Khronos COLLADA working group creating glTF, the new file format standard for 3D web and mobile applications. Tony is also the author of O’Reilly Media’s first authoritative book on WebGL, WebGL Up and Running (2012), and the upcoming Programming 3D Applications in HTML5 and WebGL (O’Reilly 2013). Read more about Tony at http://www.tonyparisi.com/</p>
+        <p>Tony is the co-creator of the VRML and X3D ISO standards for networked 3D graphics, and continues to innovate in 3D technology. He is the co-chair of the San Francisco WebGL Meetup (www.meetup.com/WebGL-Developers-Meetup), a founder of the Rest3D working group (http://www.rest3d.org/) and a member of the Khronos COLLADA working group creating glTF, the new file format standard for 3D web and mobile applications. Tony is also the author of O’Reilly Media’s first authoritative book on WebGL, WebGL Up and Running (2012), and the upcoming Programming 3D Applications in HTML5 and WebGL (O’Reilly 2013). Read more about Tony at <a href="http://www.tonyparisi.com/" target="blank">www.tonyparisi.com</a></p>
       </div>
+      <div id ="dave" class="panel">
+        <p>Programming for 35 years, 30 of that paid, first project was FPS maze game, which I paid $1/hour to make on a public library's Commodore Pet.</p>
+        <p>I was VR before VR was cool.</p>
+        <a href="http://www.tcchang.com" target="blank">www.tcchang.com</a></p>
+      </div>
+
       <div id = "tc" class="panel">
         <p>TC Chang is an accomplished artist, working in the computer entertainment industry for over twenty years. A UCLA alumni, TC has art directed numerous titles such as: Aliens Interactive, Godfather 2 and Achron. He has worked for Time Warner Interactive group, Dark Horse Comics, Disney Interactive, Sony Computer Entertainment America and Electronic Arts. TC has been the Creative Director for several technology starts ups: Flatland Online, Ping Systems, Jump City Games and Splash Inc.
-        <a href="http://www.tcchang.com" target="blank">www.tcchang.com</a></p>
+        <a href="davearendash.com" target="blank">davearendash.com</a></p>
       </div>
       <div id = 'eric' class = "panel">
         <p>Eric is a creative coder who gets incredibly excited about all the rich interactive experiences just waiting to be brought into existence. While working as a front end engineer by day, Eric was surprised yet delighted to discover many of his evenings coding webgl turning into intense, all night, passionate hackathons. As he fell more deeply in love with his night work, the days became more and more drab, until he realized he had to devote himself towards his creative work 100%, and left his day job behind.
-        His website is ericrius1.github.io and you can follow him on twitter- @ericrius1</p>
+        Check out his <a href="ericrius1.github.io" target="blank">website</a> and follow him on twitter- @ericrius1</p>
       </div>
     </div>
  
