--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
       <div id ="dave" class="panel">
         <p>Programming for 35 years, 30 of that paid, first project was FPS maze game, which I paid $1/hour to make on a public library's Commodore Pet.</p>
         <p>I was VR before VR was cool.</p>
-        <a href="http://www.tcchang.com" target="blank">www.tcchang.com</a></p>
+        <a href="http://davearendash.com" target="blank">davearendash.com</a></p>
       </div>
 
       <div id = "tc" class="panel">
         <p>TC Chang is an accomplished artist, working in the computer entertainment industry for over twenty years. A UCLA alumni, TC has art directed numerous titles such as: Aliens Interactive, Godfather 2 and Achron. He has worked for Time Warner Interactive group, Dark Horse Comics, Disney Interactive, Sony Computer Entertainment America and Electronic Arts. TC has been the Creative Director for several technology starts ups: Flatland Online, Ping Systems, Jump City Games and Splash Inc.
-        <a href="davearendash.com" target="blank">davearendash.com</a></p>
+        <a href="http://www.tcchang.com" target="blank">tcchang.com</a></p>
       </div>
       <div id = 'eric' class = "panel">
         <p>Eric is a creative coder who gets incredibly excited about all the rich interactive experiences just waiting to be brought into existence. While working as a front end engineer by day, Eric was surprised yet delighted to discover many of his evenings coding webgl turning into intense, all night, passionate hackathons. As he fell more deeply in love with his night work, the days became more and more drab, until he realized he had to devote himself towards his creative work 100%, and left his day job behind.
