--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
                 <div class="collapse navbar-collapse navbar-responsive-collapse">
                     <ul class="nav navbar-nav">
                         <li><a href="#team">Team</a></li>
-                        <li><a href="#creations">Creations</a></li>
                         <li><a href="#tech">Tech</a></li>
+                        <li><a href="#projects">Projects</a></li>
+                        <li><a href="#contact">Contact</a></li>
                     </ul>
                 </div><!--/navbar-collapse-->
             </div>    
