text front and back

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 <script src="js/vendor/CSS3DRenderer.js"></script>
 <script src="js/vendor/underscore.min.js"></script>
 <script src="js/vendor/tween.min.js"></script>
-<script src="js/vendor/TrackballControls.js"></script>
+<script src="js/vendor/OrbitControls.js"></script>
 <script src="js/vendor/FastBlur.js"></script>
 <script src="js/vendor/terrain-generator/mersenne-twister.js"></script>
 <script src="js/vendor/terrain-generator/blur.js"></script>
