bug fix with animation

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <span class="fa fa-bars"></span>
                     </button>
                     <a class="navbar-brand" href="#">
-                        <div>VIZI |/\| <span id="tagline">Virtually Anything&trade;</span></div>
+                        <div>VIZI <span id="tagline">Virtually Anything&trade;</span></div>
                     </a>
                 </div>
 
