--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 
     <div class="team">
       <div id = 'tony' class = "panel">
-        <p>Tony is an entrepreneur and career CTO/software architect who has developed international standards and protocols, developed noteworthy software products, and started and sold technology companies. Tony’s passion for innovating is exceeded only by his desire to build great products. His mission now is to bring virtual reality experiences to every person on the planet, running on every device, anywhere, any time. Tony founded Vizi in 2013, and oversees development and operations.</p>
-        <p>Tony is the co-creator of the VRML and X3D ISO standards for networked 3D graphics, and continues to innovate in 3D technology. He is the co-chair of the San Francisco WebGL Meetup (www.meetup.com/WebGL-Developers-Meetup), a founder of the Rest3D working group (http://www.rest3d.org/) and a member of the Khronos COLLADA working group creating glTF, the new file format standard for 3D web and mobile applications. Tony is also the author of O’Reilly Media’s first authoritative book on WebGL, WebGL Up and Running (2012), and the upcoming Programming 3D Applications in HTML5 and WebGL (O’Reilly 2013). Read more about Tony at <a href="http://www.tonyparisi.com/" target="blank">www.tonyparisi.com</a></p>
+        <p>Tony is an entrepreneur and career CTO/software architect who has developed international standards and protocols, developed noteworthy 3D software applications, and started and sold technology companies. Tony’s passion for innovating is exceeded only by his desire to build great products. His mission now is to bring virtual reality experiences to every person on the planet, running on every device, anywhere, any time. Tony founded Vizi in 2013, and oversees development and operations. 
+        Read more about Tony at <a href="http://www.tonyparisi.com/" target="blank">www.tonyparisi.com</a> and follow him on twitter at @auradeluxe</p>
       </div>
       <div id ="dave" class="panel">
         <p>Programming for 35 years, 30 of that paid, first project was FPS maze game, which I paid $1/hour to make on a public library's Commodore Pet.</p>
@@ -74,6 +74,12 @@
         <p>TC Chang is an accomplished artist, working in the computer entertainment industry for over twenty years. A UCLA alumni, TC has art directed numerous titles such as: Aliens Interactive, Godfather 2 and Achron. He has worked for Time Warner Interactive group, Dark Horse Comics, Disney Interactive, Sony Computer Entertainment America and Electronic Arts. TC has been the Creative Director for several technology starts ups: Flatland Online, Ping Systems, Jump City Games and Splash Inc.
         <a href="http://www.tcchang.com" target="blank">tcchang.com</a></p>
       </div>
+      <div id ="dusan" class="panel">
+        <p>About the same time when games were adopting 3d technology, my family firm got a 3d studio license (before it became MAX). I started playing around in it, and after modeling skateboards and cars I soon started creating 3d models of buildings. After a few projects, our firm started advertising rendering services as well, and I ended up doing work for other architects. Since then I have been recreating built and proposed projects, such as the facade of the De Young museum and the parametric brick wall developed at the ETH. I’ve tried to incorporate these features into my own designs ever since, and I’ve started learning how to code properly. I am currently mostly focused on real-time graphics.
+        </p>
+         <a href="http://dusanbosnjak.com/about/" target="blank">dusanbosnjak.com/about/</a></p>
+      </div>
+
       <div id = 'eric' class = "panel">
         <p>Eric is a creative coder who gets incredibly excited about all the rich interactive experiences just waiting to be brought into existence. While working as a front end engineer by day, Eric was surprised yet delighted to discover many of his evenings coding webgl turning into intense, all night, passionate hackathons. As he fell more deeply in love with his night work, the days became more and more drab, until he realized he had to devote himself towards his creative work 100%, and left his day job behind.
         Check out his <a href="ericrius1.github.io" target="blank">website</a> and follow him on twitter- @ericrius1</p>
@@ -83,13 +89,13 @@
 
 
     <div class = "creations">
-      <div id="futurego" class="iframePanel">
-        <!-- iframe will go here when user pulls up panel. -->
-        <iframe src=""></iframe>
+      <div id="futurego" class="panel">
+        <!--http://vizi.gl/engine/tests/futurgo.html -->
+        <img src="assets/img/futurego.gif"></img>
       </div> 
-      <div id="razer" class="iframePanel">
-        <!-- iframe will go here when user pulls up panel. -->
-        <iframe src=""></iframe>
+      <div id="razer" class="panel">
+        <img src="assets/img/razer.gif"></img>
+        <!-- http://vizi.gl/razer_prototype/razerzone.com/Razer%20Edge%204.htm-->
       </div> 
     </div>
 
